Script store complete

--- a/styles.css
+++ b/styles.css
@@ -289,3 +289,55 @@ img.header-bg {
 .product__btn .btn:hover {
     background-color: var(--extra-light);
 }
+
+.store__container h2 {
+    margin-bottom: 0.5rem;
+    font-size: 2rem;
+    font-weight: 700;
+    font-family: var(--header-font);
+    color: var(--text-dark);
+    text-align: center;
+}
+
+.store__container p {
+    margin-bottom: 4rem;
+    font-weight: 500;
+    color: var(--text-light);
+    text-align: center;
+}
+
+.swiper {
+    width: 100%;
+    padding-bottom: 5rem;
+}
+
+.swiper-slide {
+    max-width: 400px;
+}
+
+.store__card h4 {
+    margin-bottom: 1.5rem;
+    font-size: 1.5rem;
+    font-weight: 700;
+    font-family: var(--header-font);
+    color: var(--text-dark);
+    text-align: center;
+}
+
+.store__card img {
+    max-width: 325px;
+    margin-inline: auto;
+    margin-bottom: 2rem;
+}
+
+.store__card h3 {
+    font-size: 1.75rem;
+    font-weight: 700;
+    font-family: var(--header-font);
+    color: var(--text-dark);
+    text-align: center;
+}
+
+.swiper-pagination-bullet-active {
+    background-color: var(--text-dark);
+}
